[build-system]
requires = ["setuptools>=68.0,<75.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sweep-cli"
version = "0.1.0"
description = "Find and clean dev artifacts across all your projects. node_modules, .venv, target/, build/ — gone."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [{ name = "TRINITY-21" }]
keywords = ["cleanup", "disk", "node_modules", "devtools", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Filesystems",
    "Topic :: Utilities",
    "Environment :: Console :: Curses",
]

[project.scripts]
sweep = "sweep.cli:main"

[project.urls]
Homepage = "https://github.com/TRINITY-21/sweep"
Source = "https://github.com/TRINITY-21/sweep"
Issues = "https://github.com/TRINITY-21/sweep/issues"

[tool.setuptools.packages.find]
include = ["sweep*"]
